--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/51ba1b6f73.js" crossorigin="anonymous"></script>
 
-  <link rel='stylesheet' href="./style.css">
+  <link rel="stylesheet" href="./css/baguetteBox.min.css">
+  <link rel='stylesheet' href="./css/style.css">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
     </div>
   </header>
 
-  <section class="section-watch">
+  <section class="section-watch section-tabs">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
@@ -150,10 +151,254 @@
     </div>
   </section>
 
+  <section class="section-design">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <h3>We are best and creative agency copy</h3>
+          <h4>We turn creative ideas into your business.</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perferendis expedita possimus non
+            voluptatum saepe cupiditate ea facilis libero, voluptatem autem quidem, placeat dignissimos est, explicabo
+            enim. Tempora, quis iure.</p>
+          <div class="row">
+            <div class="col-md-6">
+              <span><i class="far fa-comments"></i></span>
+              <h2>Graphic Design</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsam voluptatum mollitia, tempore
+                necessitatibus quisquam.
+              </p>
+              <p><a href="#" class="btn btn-pink btn-shadow rounded-pill">Read more</a></p>
+            </div>
+            <div class="col-md-6">
+              <span><i class="fas fa-bullhorn"></i></span>
+              <h2>Graphic Design</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsam voluptatum mollitia, tempore
+                necessitatibus
+                quisquam.
+              </p>
+              <p><a href="#" class="btn btn-pink btn-shadow rounded-pill">Read more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="section-design-video-container">
+            <iframe class="section-design-video" src="https://www.youtube.com/embed/LqB2pZXEfO4"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+            <div id="videoPlayBtn"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-work section-tabs">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 offset-md-2 text-center">
+          <h4>Our Recent Work</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam, distinctio voluptas quidem facere porro
+            pariatur illo non, aliquam dicta maiores laudantium fugit odit corrupti fugiat. Eius quaerat voluptatibus
+            officiis dicta?</p>
+          <ul class="nav nav-pills justify-content-center" id="myTab-gallery" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="webdesign-tab2" data-bs-toggle="tab" data-bs-target="#webdesign2"
+                type="button" role="tab" aria-controls="webdesign2" aria-selected="true">Webdesign</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="mobileapp-tab2" data-bs-toggle="tab" data-bs-target="#mobileapp2"
+                type="button" role="tab" aria-controls="mobileapp2" aria-selected="false">Mobile app</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="branding-tab2" data-bs-toggle="tab" data-bs-target="#branding2" type="button"
+                role="tab" aria-controls="branding2" aria-selected="false">Branding</button>
+            </li>
+          </ul>
+
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="webdesign2" role="tabpanel" aria-labelledby="webdesign-tab2">
+              <div class="gallery text-center row">
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/1.jpg">
+                    <img src="./img/1_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/2.jpg">
+                    <img src="./img/2_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/3.jpg">
+                    <img src="./img/3_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/4.jpg">
+                    <img src="./img/4_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/5.jpg">
+                    <img src="./img/5_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/6.jpg">
+                    <img src="./img/6_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/7.jpg">
+                    <img src="./img/7_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/8.jpg">
+                    <img src="./img/8_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/9.jpg">
+                    <img src="./img/9_s.jpg" alt="">
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade" id="mobileapp2" role="tabpanel" aria-labelledby="mobileapp-tab2">
+              <div class="gallery text-center row">
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/5.jpg">
+                    <img src="./img/5_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/6.jpg">
+                    <img src="./img/6_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/7.jpg">
+                    <img src="./img/7_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/1.jpg">
+                    <img src="./img/1_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/2.jpg">
+                    <img src="./img/2_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/3.jpg">
+                    <img src="./img/3_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/4.jpg">
+                    <img src="./img/4_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/8.jpg">
+                    <img src="./img/8_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/9.jpg">
+                    <img src="./img/9_s.jpg" alt="">
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade" id="branding2" role="tabpanel" aria-labelledby="branding-tab2">
+              <div class="gallery text-center row">
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/7.jpg">
+                    <img src="./img/7_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/8.jpg">
+                    <img src="./img/8_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/9.jpg">
+                    <img src="./img/9_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/1.jpg">
+                    <img src="./img/1_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/2.jpg">
+                    <img src="./img/2_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/3.jpg">
+                    <img src="./img/3_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/4.jpg">
+                    <img src="./img/4_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/5.jpg">
+                    <img src="./img/5_s.jpg" alt="">
+                  </a>
+                </div>
+                <div class="col-sm-4 gallery-item">
+                  <a href="./img/6.jpg">
+                    <img src="./img/6_s.jpg" alt="">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <section class="section-reviews">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-xl-5">
+          <h3>Our Happy Client</h3>
+          <h4>Testimonials</h4>
+          <img class="section-reviews-img-blockquote" src="./img/blockquote.png" alt="">
+          <blockquote>
+            <p class="mx-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia illum placeat quasi. Expedita incidunt
+              aliquid, eaque ipsa quod aperiam cumque necessitatibus, adipisci quos architecto et sapiente quidem
+              deserunt eum provident!
+            </p>
+            <img class="section-reviews-img-stars mx-5" src="./img/shape.png" alt="">
+            <p class="mx-5">Mr. John Doe</p>
+          </blockquote>
+        </div>
+        <div class="col-xl-4 text-center">
+          <img src="./img/client.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
-  <script src="./index.js"></script>
+  <script src="./src/baguetteBox.min.js"></script>
+  <script src="./src/index.js"></script>
 </body>
 
 </html>
