final html and css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/51ba1b6f73.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./css/baguetteBox.min.css">
   <link rel='stylesheet' href="./css/style.css">
@@ -371,28 +370,181 @@
     </div>
   </section>
 
+  <section class="section-logo">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-2 align-self-end text-center">
+          <img src="./img/logo_cisco.png" alt="">
+        </div>
+        <div class="col-md-2 align-self-end text-center">
+          <img src="./img/logo_adidas.png" alt="">
+        </div>
+        <div class="col-md-2 align-self-center text-center">
+          <img src="./img/logo_lenovo.png" alt="">
+        </div>
+        <div class="col-md-2 align-self-center text-center">
+          <img src="./img/logo_disney.png" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-2 align-self-end text-center">
+          <img src="./img/logo_amazon.png" alt="">
+        </div>
+        <div class="col-md-2 align-self-end text-center">
+          <img src="./img/logo_puma.png" alt="">
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="./img/logo_apple.png" alt="">
+        </div>
+        <div class="col-md-2 align-self-center text-center">
+          <img src="./img/logo_mini_cooper.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="section-reviews">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-xl-5">
+        <div class="col-lg-5">
           <h3>Our Happy Client</h3>
           <h4>Testimonials</h4>
           <img class="section-reviews-img-blockquote" src="./img/blockquote.png" alt="">
           <blockquote>
-            <p class="mx-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia illum placeat quasi. Expedita incidunt
-              aliquid, eaque ipsa quod aperiam cumque necessitatibus, adipisci quos architecto et sapiente quidem
-              deserunt eum provident!
+            <p class="mx-5">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum exercitationem eveniet repellendus.
+              Assumenda repellat quis suscipit ullam dolores magnam ipsam?
             </p>
             <img class="section-reviews-img-stars mx-5" src="./img/shape.png" alt="">
             <p class="mx-5">Mr. John Doe</p>
           </blockquote>
         </div>
-        <div class="col-xl-4 text-center">
+        <div class="col-lg-4 text-center align-self-end">
           <img src="./img/client.png" alt="">
         </div>
       </div>
     </div>
   </section>
+
+  <section class="section-form text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h4>Need Help?</h4>
+          <h5>Don't Forget to Contact With Us</h5>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur blanditiis doloremque est ex
+            repudiandae ad cum! Expedita doloremque distinctio maiores suscipit blanditiis, unde ipsam laudantium omnis
+            molestiae, saepe nemo consectetur!
+          </p>
+          <div class="row">
+            <div class="col-md-5">
+              <input type="text" class="form-control" placeholder="Name" aria-label="First name">
+            </div>
+            <div class="col-md-5">
+              <input type="email" class="form-control" placeholder="Email" aria-label="Last name">
+            </div>
+            <div class="col-md-2">
+              <button class="btn btn-violet btn-shadow" type="submit">Submit</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-6">
+              <h5>Company</h5>
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Approach</a></li>
+                <li><a href="#">Sustainability</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">News</a></li>
+              </ul>
+            </div>
+            <div class="col-6">
+              <h5>Company</h5>
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Approach</a></li>
+                <li><a href="#">Sustainability</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">News</a></li>
+              </ul>
+            </div>
+            <div class="col-6">
+              <h5>Company</h5>
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Approach</a></li>
+                <li><a href="#">Sustainability</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">News</a></li>
+              </ul>
+            </div>
+            <div class="col-6">
+              <h5>Company</h5>
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Approach</a></li>
+                <li><a href="#">Sustainability</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">News</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 footer-images">
+          <div class="row">
+            <div class="col-6">
+              <img src="./img/footer_img1.jpg" alt="">
+            </div>
+            <div class="col-6">
+              <img src="./img/footer_img2.jpg" alt="">
+            </div>
+            <div class="col-6">
+              <img src="./img/footer_img3.jpg" alt="">
+            </div>
+            <div class="col-6">
+              <img src="./img/footer_img4.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <div class="copyright">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <ul class="nav">
+            <li class="nav-item">
+              <span class="nav-link">&copy; 2022 Theme by psdfreebies.com</span>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Privacy</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Terms of Use</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Site map</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
