--- a/index.html
+++ b/index.html
@@ -9,15 +9,36 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
+    <style>
+      .preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 9999;
+        background-color: #fefefe;
+      }
+    </style>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/51ba1b6f73.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="./css/baguetteBox.min.css">
   <link rel='stylesheet' href="./css/style.css">
 </head>
 
 <body>
+  <div class="preloader d-flex justify-content-center align-items-center">
+    <div class="spinner-border text-danger" style="width: 10rem; height: 10rem;" role="status">
+      <span class="visually-hidden">Загрузка...</span>
+    </div>
+  </div>
+
+  <button class="scrollToTop"><i class="fas fa-angle-up"></i></button>
+
   <header class="main-header">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -31,10 +52,10 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0 ml-auto">
-            <li class="nav-item"><a class="nav-link" href="#1">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-            <li class="nav-item"><a class="nav-link" href="#2">Product</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Product</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Reviews</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Faq</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -546,6 +567,7 @@
     </div>
   </div>
 
+  <script src="./src/jquery-3.3.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
