--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap-project</title>
+  <title>Creative-agency</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -205,9 +205,10 @@
         <div class="col-lg-6">
           <div class="section-design-video-container">
             <iframe class="section-design-video" src="https://www.youtube.com/embed/LqB2pZXEfO4"
-              title="YouTube video player" frameborder="0"
+              title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
+              allowfullscreen>
+            </iframe>
             <div id="videoPlayBtn"></div>
           </div>
         </div>
@@ -238,52 +239,52 @@
             </li>
           </ul>
 
-          <div class="tab-content" id="myTabContent">
+          <div class="tab-content" id="tabContent">
             <div class="tab-pane fade show active" id="webdesign2" role="tabpanel" aria-labelledby="webdesign-tab2">
               <div class="gallery text-center row">
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/1.jpg">
-                    <img src="./img/1_s.jpg" alt="">
+                    <img src="./img/1_s.jpg" alt="bottle">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/2.jpg">
-                    <img src="./img/2_s.jpg" alt="">
+                    <img src="./img/2_s.jpg" alt="blue circle">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/3.jpg">
-                    <img src="./img/3_s.jpg" alt="">
+                    <img src="./img/3_s.jpg" alt="magazine">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/4.jpg">
-                    <img src="./img/4_s.jpg" alt="">
+                    <img src="./img/4_s.jpg" alt="T-shirt">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/5.jpg">
-                    <img src="./img/5_s.jpg" alt="">
+                    <img src="./img/5_s.jpg" alt="box">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/6.jpg">
-                    <img src="./img/6_s.jpg" alt="">
+                    <img src="./img/6_s.jpg" alt="bottles">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/7.jpg">
-                    <img src="./img/7_s.jpg" alt="">
+                    <img src="./img/7_s.jpg" alt="tags">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/8.jpg">
-                    <img src="./img/8_s.jpg" alt="">
+                    <img src="./img/8_s.jpg" alt="bag">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/9.jpg">
-                    <img src="./img/9_s.jpg" alt="">
+                    <img src="./img/9_s.jpg" alt="bottles">
                   </a>
                 </div>
               </div>
@@ -292,47 +293,47 @@
               <div class="gallery text-center row">
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/5.jpg">
-                    <img src="./img/5_s.jpg" alt="">
+                    <img src="./img/5_s.jpg" alt="box">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/6.jpg">
-                    <img src="./img/6_s.jpg" alt="">
+                    <img src="./img/6_s.jpg" alt="bottles">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/7.jpg">
-                    <img src="./img/7_s.jpg" alt="">
+                    <img src="./img/7_s.jpg" alt="tags">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/1.jpg">
-                    <img src="./img/1_s.jpg" alt="">
+                    <img src="./img/1_s.jpg" alt="bottle">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/2.jpg">
-                    <img src="./img/2_s.jpg" alt="">
+                    <img src="./img/2_s.jpg" alt="blue circle">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/3.jpg">
-                    <img src="./img/3_s.jpg" alt="">
+                    <img src="./img/3_s.jpg" alt="magazine">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/4.jpg">
-                    <img src="./img/4_s.jpg" alt="">
+                    <img src="./img/4_s.jpg" alt="T-shirt">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/8.jpg">
-                    <img src="./img/8_s.jpg" alt="">
+                    <img src="./img/8_s.jpg" alt="bag">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/9.jpg">
-                    <img src="./img/9_s.jpg" alt="">
+                    <img src="./img/9_s.jpg" alt="bottles">
                   </a>
                 </div>
               </div>
@@ -341,47 +342,47 @@
               <div class="gallery text-center row">
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/7.jpg">
-                    <img src="./img/7_s.jpg" alt="">
+                    <img src="./img/7_s.jpg" alt="tags">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/8.jpg">
-                    <img src="./img/8_s.jpg" alt="">
+                    <img src="./img/8_s.jpg" alt="bag">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/9.jpg">
-                    <img src="./img/9_s.jpg" alt="">
+                    <img src="./img/9_s.jpg" alt="bottles">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/1.jpg">
-                    <img src="./img/1_s.jpg" alt="">
+                    <img src="./img/1_s.jpg" alt="bottle">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/2.jpg">
-                    <img src="./img/2_s.jpg" alt="">
+                    <img src="./img/2_s.jpg" alt="blue circle">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/3.jpg">
-                    <img src="./img/3_s.jpg" alt="">
+                    <img src="./img/3_s.jpg" alt="magazine">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/4.jpg">
-                    <img src="./img/4_s.jpg" alt="">
+                    <img src="./img/4_s.jpg" alt="T-shirt">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/5.jpg">
-                    <img src="./img/5_s.jpg" alt="">
+                    <img src="./img/5_s.jpg" alt="box">
                   </a>
                 </div>
                 <div class="col-sm-4 gallery-item">
                   <a href="./img/6.jpg">
-                    <img src="./img/6_s.jpg" alt="">
+                    <img src="./img/6_s.jpg" alt="bottles">
                   </a>
                 </div>
               </div>
@@ -390,39 +391,38 @@
         </div>
       </div>
     </div>
-    </div>
   </section>
 
   <section class="section-logo">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-2 align-self-end text-center">
-          <img src="./img/logo_cisco.png" alt="">
+          <img src="./img/logo_cisco.png" alt="logo cisco">
         </div>
         <div class="col-md-2 align-self-end text-center">
-          <img src="./img/logo_adidas.png" alt="">
+          <img src="./img/logo_adidas.png" alt="logo adidas">
         </div>
         <div class="col-md-2 align-self-center text-center">
-          <img src="./img/logo_lenovo.png" alt="">
+          <img src="./img/logo_lenovo.png" alt="logo lenovo">
         </div>
         <div class="col-md-2 align-self-center text-center">
-          <img src="./img/logo_disney.png" alt="">
+          <img src="./img/logo_disney.png" alt="logo disney">
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-2 align-self-end text-center">
-          <img src="./img/logo_amazon.png" alt="">
+          <img src="./img/logo_amazon.png" alt="logo amazon">
         </div>
         <div class="col-md-2 align-self-end text-center">
-          <img src="./img/logo_puma.png" alt="">
+          <img src="./img/logo_puma.png" alt="logo puma">
         </div>
         <div class="col-md-2 text-center">
-          <img src="./img/logo_apple.png" alt="">
+          <img src="./img/logo_apple.png" alt="logo apple">
         </div>
         <div class="col-md-2 align-self-center text-center">
-          <img src="./img/logo_mini_cooper.png" alt="">
+          <img src="./img/logo_mini_cooper.png" alt="logo mini-cooper">
         </div>
       </div>
     </div>
@@ -434,18 +434,18 @@
         <div class="col-lg-5">
           <h3>Our Happy Client</h3>
           <h4>Testimonials</h4>
-          <img class="section-reviews-img-blockquote" src="./img/blockquote.png" alt="">
+          <img class="section-reviews-img-blockquote" src="./img/blockquote.png" alt="quotation marks">
           <blockquote>
             <p class="mx-5">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum exercitationem eveniet repellendus.
               Assumenda repellat quis suscipit ullam dolores magnam ipsam?
             </p>
-            <img class="section-reviews-img-stars mx-5" src="./img/shape.png" alt="">
+            <img class="section-reviews-img-stars mx-5" src="./img/shape.png" alt="five stars">
             <p class="mx-5">Mr. John Doe</p>
           </blockquote>
         </div>
         <div class="col-lg-4 text-center align-self-end">
-          <img src="./img/client.png" alt="">
+          <img src="./img/client.png" alt="client's photo">
         </div>
       </div>
     </div>
@@ -529,16 +529,16 @@
         <div class="col-md-6 footer-images">
           <div class="row">
             <div class="col-6">
-              <img src="./img/footer_img1.jpg" alt="">
+              <img src="./img/footer_img1.jpg" alt="people are working on a laptop">
             </div>
             <div class="col-6">
-              <img src="./img/footer_img2.jpg" alt="">
+              <img src="./img/footer_img2.jpg" alt="people are working on a laptop">
             </div>
             <div class="col-6">
-              <img src="./img/footer_img3.jpg" alt="">
+              <img src="./img/footer_img3.jpg" alt="people are working on a laptop">
             </div>
             <div class="col-6">
-              <img src="./img/footer_img4.jpg" alt="">
+              <img src="./img/footer_img4.jpg" alt="people are working on a laptop">
             </div>
           </div>
         </div>
