--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@
             <h2><a href="single.html">Lorem ipsum dolor sit</a></h2>
             <p><span class="article-date"><i class="far fa-calendar-alt"></i> 01.01.2000</span></p>
             <div class="article-excerpt">
-              <p><a href="single.html"><img src="https://picsum.photos/250/170" alt="" class="thumb"></a>Lorem ipsum
+              <p><a href="single.html"><img src="https://picsum.photos/250/170" alt="random image" class="thumb"></a>Lorem ipsum
                 dolor
                 sit amet, consectetur adipisicing elit. Aliquam culpa temporibus facere quaerat cumque. Animi id neque,
                 tempore quas earum libero aut beatae mollitia rerum repellendus, ducimus fuga, quam illum.</p>
@@ -92,7 +92,7 @@
             <h2><a href="single.html">Lorem ipsum dolor sit</a></h2>
             <p><span class="article-date"><i class="far fa-calendar-alt"></i> 01.01.2000</span></p>
             <div class="article-excerpt">
-              <p><a href="single.html"><img src="https://picsum.photos/250/170" alt="" class="thumb"></a>Lorem ipsum
+              <p><a href="single.html"><img src="https://picsum.photos/250/170" alt="random image" class="thumb"></a>Lorem ipsum
                 dolor
                 sit amet, consectetur adipisicing elit. Aliquam culpa temporibus facere quaerat cumque. Animi id neque,
                 tempore quas earum libero aut beatae mollitia rerum repellendus, ducimus fuga, quam illum.</p>
@@ -104,7 +104,7 @@
             <h2><a href="single.html">Lorem ipsum dolor sit</a></h2>
             <p><span class="article-date"><i class="far fa-calendar-alt"></i> 01.01.2000</span></p>
             <div class="article-excerpt">
-              <p><a href="single.html"><img src="https://picsum.photos/250/170" alt="" class="thumb"></a>Lorem ipsum
+              <p><a href="single.html"><img src="https://picsum.photos/250/170" alt="random image" class="thumb"></a>Lorem ipsum
                 dolor
                 sit amet, consectetur adipisicing elit. Aliquam culpa temporibus facere quaerat cumque. Animi id neque,
                 tempore quas earum libero aut beatae mollitia rerum repellendus, ducimus fuga, quam illum.</p>
@@ -196,16 +196,16 @@
         <div class="col-md-6 footer-images">
           <div class="row">
             <div class="col-6">
-              <img src="./img/footer_img1.jpg" alt="">
+              <img src="./img/footer_img1.jpg" alt="people are working on a laptop">
             </div>
             <div class="col-6">
-              <img src="./img/footer_img2.jpg" alt="">
+              <img src="./img/footer_img2.jpg" alt="people are working on a laptop">
             </div>
             <div class="col-6">
-              <img src="./img/footer_img3.jpg" alt="">
+              <img src="./img/footer_img3.jpg" alt="people are working on a laptop">
             </div>
             <div class="col-6">
-              <img src="./img/footer_img4.jpg" alt="">
+              <img src="./img/footer_img4.jpg" alt="people are working on a laptop">
             </div>
           </div>
         </div>
