--- a/single.html
+++ b/single.html
@@ -76,7 +76,7 @@
             <p><span class="article-date"><i class="far fa-calendar-alt"></i> 01.01.2000</span></p>
             <div class="article-excerpt">
               <p>
-                <img src="https://picsum.photos/250/170" alt="" class="thumb">
+                <img src="https://picsum.photos/250/170" alt="random image" class="thumb">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam culpa temporibus facere quaerat
                 cumque. Animi id neque,
                 tempore quas earum libero aut beatae mollitia rerum repellendus, ducimus fuga, quam illum.
@@ -157,16 +157,16 @@
         <div class="col-md-6 footer-images">
           <div class="row">
             <div class="col-6">
-              <img src="./img/footer_img1.jpg" alt="">
+              <img src="./img/footer_img1.jpg" alt="people are working on a laptop">
             </div>
             <div class="col-6">
-              <img src="./img/footer_img2.jpg" alt="">
+              <img src="./img/footer_img2.jpg" alt="people are working on a laptop">
             </div>
             <div class="col-6">
-              <img src="./img/footer_img3.jpg" alt="">
+              <img src="./img/footer_img3.jpg" alt="people are working on a laptop">
             </div>
             <div class="col-6">
-              <img src="./img/footer_img4.jpg" alt="">
+              <img src="./img/footer_img4.jpg" alt="people are working on a laptop">
             </div>
           </div>
         </div>
